--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@joshmiquel/hirez-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Hirez API",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "prepare": "npm run build",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -16,13 +19,14 @@
   "bugs": {
     "url": "https://gitlab.com/JoShMiQueL/hirez-api/-/issues"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "files": [
+    "lib/**/*"
+  ],
+  "keywords": ["smite", "paladins", "hirez", "moba", "game"],
+  "author": "JoShMiQueL",
+  "license": "MIT",
   "devDependencies": {
     "prettier": "^2.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
