--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joshmiquel/hirez",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Hirez API",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,7 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "prepare": "npm run build",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "browserify": "browserify /src/index.ts -o /lib/index.js"
   },
   "repository": {
     "type": "git",
