--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,13 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
+    "noImplicitAny": true,
+    "removeComments": true,
     "outDir": "./lib",
     "strict": true
   },
-  "include": [
-    "src"
+  "files": [
+    "./src/index.ts"
   ],
   "exclude": [
     "node_modules",
